deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
# Name your deployment
  name: nginx-proxy-manager
  namespace: manager
spec:
# Number of replicas (instances) of the pod
  replicas: 1
  selector:
    matchLabels:
    # Selector to match labels for pod assignment
      app: nginx-proxy-manager
  template:
    metadata:
      labels:
      # Labels the pods created by this deployment
        app: nginx-proxy-manager
    spec:
      containers:
      # Name the Kubernetes container
      - name: nginx-proxy-manager
      # Docker image for Nginx Proxy Manager
        image: jc21/nginx-proxy-manager:latest
        ports:
        - containerPort: 80  # Port 80 Exposed
        - containerPort: 81  # Port 81 Exposed
        - containerPort: 443  # Port 443 Exposed
        volumeMounts:
        - name: data
          mountPath: /data
        - name: letsencrypt
          mountPath: /etc/letsencrypt
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pvc-data
      - name: letsencrypt
        persistentVolumeClaim:
          claimName: pvc-letsencrypt
