mariadb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
# mariadb deployment
  name: mariadb
  namespace: manager
spec:
# Number of mariadb replicas (instances)
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      # Name mariadb container
      - name: mariadb
      # Docker image for MariaDB
        image: jc21/mariadb-aria:latest
        volumeMounts:
        - name: data
        # Mount MariaDB path for persistent data
          mountPath: /var/lib/mysql
      volumes:
      - name: data
        persistentVolumeClaim:
        # Use PersistentVolumeClaim for MariaDB data
          claimName: pvc-database
